  we might fail to detect it and choose a wrong bridge to eliminate the hole. (Ignacio Vera)

Other
---------------------
* GITHUB#15586: Document that scoring and ranking may change across major Lucene versions, and that applications requiring stable ranking should explicitly configure Similarity. (Parveen Saini)

======================= Lucene 10.4.0 =======================

API Changes
---------------------
* GITHUB#15497: Singleton for MatchAllDocsQuery & MatchNoDocsQuery. (hossman)

* GITHUB#15149: Introduce NumericDocValues#longValues to help speed up the
  retrieval of many doc values at once. (Adrien Grand)

* GITHUB#15173: Introduce DocIdStream#intoArray to help collect batches of doc
  IDs at once, in particular by taking advantage of the new
  NumericDocValues#longValues API. (Adrien Grand)

* GITHUB#15234: Remove unused method which does unsafe XML parsing.
  (Uwe Schindler, Isaac David)

* GITHUB#14515: IndexWriter.forceMergeDeletes() now returns MergePolicy.MergeObserver,
  allowing applications to monitor merge progress and wait for completion. The observer
  provides methods to query merge count, check completion status, and wait synchronously
  (with optional timeout) or asynchronously via CompletableFuture. Backward compatible -
  existing code that ignores the return value works unchanged. (Salvatore Campagna)

* GITHUB#15422: Add a new method in DirectWriter to compute how many bytes are written for encoding a number of values using a number of
  bits per value. (Ignacio Vera)

* GITHUB#15428: Add support for ExecutorServices to be passed into DirectoryReader.open() and DirectoryReader.openIfChanged() APIs (Bryce Kane)

* GITHUB#15483: Deprecate SortField.setMissingValue() in preparation for making SortField immutable
  in Lucene 11.0. Missing values can be set as constructor parameters.  (Alan Woodward)

* GITHUB#15501: Introduce optional access to backing vector values from the scorer  (Chris Hegarty)
